src/css/main.css
/* ... */
@media (max-width: 575px) {
  .card {
    width: 100%;
  }
  /* .scrolling-bg {
    height: 220vh;
    min-height: 42rem;
  } */
  .article-wrapper {
    padding-left: var(--spacer);
    padding-right: var(--spacer);
  }
}

/***********************************************/
/*************contact form styling**************/
/***********************************************/
/* .main-content #form-container {
  width: 60rem;
} */

/* #contact-form {
  margin-top: var(--spacer-section);
} */

.hidden {
  display: none;
}

.card-contact {
  background-color: var(--c-white);
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  /* align-items: center; */
  /* box-shadow: none; */
  /* border-radius: var(--border-radius); */
  padding: var(--spacer-xlarge);
  text-align: left;
  color: var(--c-dark);
  position: relative;
  width: 100%;
  max-width: 100%;
  overflow: hidden;
  box-shadow: none;
}

.contact-form {
  display: flex;
  flex-direction: column;
  width: 100%;
  grid-template-columns: 1fr 1fr;
  font-size: var(--fs-p);
  font-family: var(--ff-sans);
  align-items: center;
  gap: var(--spacer);
}

.contact-form > * {
  width: 100%;
}

.label-group {
  display: flex;
  gap: var(--spacer);
  flex-direction: column;
}

.form-group {
  display: grid;
  column-gap: var(--spacer-large);
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
}

.grid-span {
  /* grid-column: 1/3;
  padding: var(--spacer) 0em; */
  text-align: center;
}

/* .grid-left {
  grid-column: 1 / 2;
  margin-right: var(--spacer);
  font-family: var(--ff-sans);
} */

.grid-right {
  /* grid-column: 2/3; */
  margin-bottom: var(--spacer);
}

/* .contact-form .card-name {
  margin: 0;
  text-transform: none;
} */

.form-input {
  font-size: var(--fs-p);
  font-family: var(--ff-p-sans);
  border-radius: var(--border-radius);
  /* border-color: var(--c-light-accent); */
  border-width: 3px;
  border-color: var(--c-medium);
  border-style: solid;
  padding: var(--spacer);
  background-color: var(--c-white);
  color: var(--c-dark);
}

.label-group .card-caption {
  color: var(--c-dark);
}

.label-group .form-message,
.form-error {
  display: none;
  color: var(--c-medium);
  font-style: italic;
  margin-top: calc(-1.5 * var(--spacer));
  margin-bottom: var(--spacer);
}

.label-group.error .form-message {
  display: block;
  color: var(--c-error);
}

.label-group.error .form-input {
  border-color: var(--c-error);
}
.label-group.success .form-input {
  display: block;
  border-color: var(--c-success);
}

.form-input:focus {
  background-color: var(--c-light);
  outline-color: var(--c-dark);
  outline-width: 0.25rem;
  outline-style: solid;
}

.textarea {
  text-align: start;
}

.contact-form button {
  cursor: pointer;
  border-radius: var(--border-radius);
  color: var(--c-dark);
  font-family: var(--ff-sans);
  font-size: var(--fs-small);
  padding: var(--spacer);
}

.button {
  display: inline-block;
  padding: var(--spacer);
  background: var(--c-medium);
  cursor: pointer;
  border-radius: var(--border-radius);
  border: 1px solid var(--c-dark);
  color: var(--c-white);
}

/* .contact-form button:hover {
  background: var(--c-dark);
  color: var(--c-white);
} */

#drop-area {
  /* display: grid;
    place-items: center; */
  background-color: var(--c-white);
  color: var(--c-dark);
  min-height: 10em;
  border: 0.25rem dashed var(--c-medium);
}

#drop-area.highlight {
  border-color: var(--c-dark-accent);
}

#submitted-files {
  display: none;
}

.dropzone-previews {
  padding-top: var(--spacer-large) !important;
  background-color: var(--c-white) !important;
}

.dropzone .dz-preview.dz-image-preview {
  background-color: var(--c-white) !important;
}

/* .dz-preview button {
    position: absolute;
    top:-3em;
    width: 100%;
    left: 0;
    right: 0;
    background: var(--c-medium);
    color: var(--c-white);
} */

/* .dz-preview button:hover {
    background: var(--c-white) !important;
    color: var(--c-dark) !important;
    border: 2px solid var(--c-dark);
  } */

.button:hover {
  background: var(--c-white);
  color: var(--c-dark);
  /* font-style: bold; */
}

@media (max-width: 575px) {
  .card-contact {
    padding: var(--spacer);
  }

  /* .grid-left {
    grid-column: 1 / 3;
    margin: 0;
    text-align: left;
  } */

  .contact-form button {
    text-align: center;
  }

  /* .contact-form .card-name {
    text-align: center;
  } */

  /* .grid-right {
    grid-column: 1 / 3;
    margin: 0;
    text-align: center;
  } */
}

/***********************************************/
/***************portfolio styling***************/
/***********************************************/

.gallery {
  /* --c-medium: rgba(112, 137, 97, .5); */
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
  grid-auto-rows: 200px 200px;
  grid-auto-flow: dense;
  gap: var(--spacer-medium);
  max-width: var(--spacer-max-width);
  border-radius: var(--border-radius);
  width: 100%;
}

.gallery img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-radius: var(--border-radius);
  box-shadow: var(--shadow);
}

@media (min-width: 480px) {
  .gallery-item:first-child {
    grid-area: 1 / 1 / span 2 / span 2;
  }

  .gallery-item:nth-child(3n) {
    grid-column: span 2;
  }

  .gallery-item:nth-child(6n) {
    grid-column: span 2;
    grid-row: span 2;
  }
}

/***********************************************/
/****************footer styling*****************/
/***********************************************/

/* .footer-link styling in .nav-link section */
.floating-wrapper {
  display: none;
}

.footer-wrapper {
  padding: var(--spacer-xlarge);
  background-color: var(--c-dark);
  color: var(--c-white);
  text-align: center;
  display: flex;
  flex-direction: column;
}

.footer-title {
  margin-bottom: var(--spacer-xlarge);
  font-family: var(--ff-sans);
  color: var(--c-white);
  font-size: var(--fs-small);
}
/* ... */

